--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body>
@@ -39,6 +41,44 @@
                 <p class="chekar"><span class="chekar-color"> &#10003;</span> ontrary to popular belief</p>
 
             </div>
+        </div>
+
+    </section>
+
+    <section>
+        <h2 class="plan">My Plans</h2>
+        <div class="icon">
+            <div class="icone-details">
+                <img src="images/icons/web.png" alt="">
+                <h2>Web Development</h2>
+                <p>I want to start</p>
+            </div>
+            <div class="icone-details">
+                <img src="images/icons/js.png" alt="">
+                <h2>Javascript</h2>
+                <p>I want to learn</p>
+            </div>
+            <div class="icone-details">
+                <img src="images/icons/smoke.png" alt="">
+                <h2>Smoking Habit</h2>
+                <p>I want to end</p>
+            </div>
+            <div class="icone-details">
+                <img src="images/icons/ecom.png" alt="">
+                <h2>Ecommerce</h2>
+                <p>I want to develop</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="watch">
+            <img src="images/gradient2.png" alt="">
+        </div>
+        <div class="gradient-text">
+            
+            <h2>Awlays keep a positive mindset</h2>
+            <button>Call Now</button>
         </div>
 
     </section>
