sipmle css project

--- a/index.html
+++ b/index.html
@@ -76,12 +76,40 @@
             <img src="images/gradient2.png" alt="">
         </div>
         <div class="gradient-text">
-            
+
             <h2>Awlays keep a positive mindset</h2>
             <button>Call Now</button>
         </div>
-
     </section>
+    <section>
+        <div class="fotter">
+
+
+            <div>
+                <h2>Future</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+                <div class="socile-icone">
+                    <a href="https://www.facebook.com/mdjakariya318" target="_blank"><img src="/images/icons/fb.png"
+                            alt=""></a>
+                    <img src="/images/icons/twitter.png" alt="">
+                    <a href="https://www.youtube.com/channel/UCulB2v67Wpv8j5rm8Cn_VLg" target="_blank">
+                        <img src="/images/icons/youtube.png" alt=""></a>
+                </div>
+            </div>
+            <div class="fotter-subsribe">
+                <h2>Subscribe</h2>
+                <input type="email" value="" placeholder="Enter your email">
+                <button>Subscribe</button>
+            </div>
+        </div>
+    </section>
+    <footer class="developar">
+        <h2> Copyright © 2023 By: <span class="developar-sub">JS </span><a href="https://www.facebook.com/mdjakariya318"
+                target="_blank">Jakaria</a> </h2>
+    </footer>
 
 </body>
 
