--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                 <p>Email : info@gmail.com</p>
                 <p>Phone : 01500 00 00 00</p>
                 <div class="socile-icone">
-                    <a href="https://www.facebook.com/mdjakariya318" target="_blank"><img src="/images/icons/fb.png"
+                    <a href="https://www.facebook.com/mdjakariya318" target="_blank"><img src="images/icons/fb.png"
                             alt=""></a>
-                    <img src="/images/icons/twitter.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
                     <a href="https://www.youtube.com/channel/UCulB2v67Wpv8j5rm8Cn_VLg" target="_blank">
-                        <img src="/images/icons/youtube.png" alt=""></a>
+                        <img src="images/icons/youtube.png" alt=""></a>
                 </div>
             </div>
             <div class="fotter-subsribe">
